applications/platform/spire/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spire-ingress
  namespace: spire
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: spire-oidc.happylittlecloud.ca
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: spire-oidc
          servicePort: 80

          #- path: /.well-known/openid-configuration
          #  backend:
          #    serviceName: spire-oidc
          #    servicePort: 80
          #- path: /keys
          #  backend:
          #    serviceName: spire-oidc
          #    servicePort: 80
